--- a/src/components/FilterHeader.css
+++ b/src/components/FilterHeader.css
@@ -1,34 +1,46 @@
-.FilterHeader__header {
-  padding: .75em;
+.FilterHeader {
   flex: 0 0 auto;
 }
 
-.FilterHeader__header__titleRow {
+.actionTypeAndFilterByRow {
+  display: flex;
+  padding: .5rem;
+}
+
+.filterByOptions {
+  font-size: .7rem;
+  display: flex;
+  align-items: center;
+}
+
+.actionType {
+  flex: 1 0 auto;
+}
+
+.label {
+  margin-left: .5em;
+  font-weight: normal;
+}
+
+.filterContainer {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   align-items: center;
-  margin-bottom: .75em;
-  font-size: .75em;
+  padding: .5rem;
+  font-size: .65rem;
   text-transform: uppercase;
   font-weight: bold;
 }
 
-.FilterHeader__header__title {
-  flex: 1;
-}
-
-.FilterHeader__input {
-  width: 100%;
+.input {
+  flex: 0 0 100%;
+  margin-top: .35rem;
   border-radius: .25em;
   line-height: 2rem;
-  padding: 0 .75em;
+  padding: 0 .5rem;
   border: none;
 }
-.FilterHeader__input:focus {
+.input:focus {
   outline: none;
-}
-
-.FilterHeader__label {
-  margin-left: .5em;
-  font-weight: normal;
 }
