--- a/src/components/FilterHeader.css
+++ b/src/components/FilterHeader.css
@@ -4,15 +4,15 @@
 
 .actionTypeAndFilterByRow {
   display: flex;
-  padding: .5rem;
+  padding: .5em;
 }
 
 .filterByOptions {
-  font-size: .7rem;
+  font-size: .8em;
   display: flex;
   align-items: center;
   flex: 0 0 auto;
-  margin-left: .5rem;
+  margin-left: .5em;
 }
 
 .actionType {
@@ -37,8 +37,8 @@
   flex-direction: row;
   flex-wrap: wrap;
   align-items: center;
-  padding: .5rem;
-  font-size: .65rem;
+  padding: .75em;
+  font-size: .65em;
   text-transform: uppercase;
   font-weight: bold;
 }
@@ -46,8 +46,8 @@
 .input {
   flex: 0 0 100%;
   border-radius: .25em;
-  line-height: 2rem;
-  padding: 0 .5rem;
+  line-height: 3em;
+  padding: 0 .75em;
   border: none;
 }
 .input:focus {
