--- a/src/FilterableLogMonitor.css
+++ b/src/FilterableLogMonitor.css
@@ -7,6 +7,31 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  overflow-y: scroll;
   font-size: 14px;
+}
+
+.filterActionsHeader {
+  flex: 0 0 auto;
+  display: flex;
+  flex-direction: row;
+  padding: .75em;
+  font-size: .65em;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+.input {
+  flex: 0 0 100%;
+  border-radius: .25em;
+  line-height: 3em;
+  padding: 0 .75em;
+  border: none;
+}
+.input:focus {
+  outline: none;
+}
+
+.filterableStates {
+  overflow-y: scroll;
+  flex: 1;
 }
