Increased highlight contrast

--- a/src/components/FilterableState.css
+++ b/src/components/FilterableState.css
@@ -1,4 +1,9 @@
-.highlight {
-  background-color: rgba(255, 255, 255, .1);
-  color: white;
+.highlightKey,
+.highlightValue {
+  display: inline-block;
+  padding: 3px 0;
+  margin: -3px 0;
+  background-color: #c9cb0f;
+  color: #2A2F3A;
+  font-weight: normal;
 }
