Changed style slightly to improve font rendering

--- a/website/Application.css
+++ b/website/Application.css
@@ -1,7 +1,10 @@
 body {
-  font-family: Roboto, 'Open Sans', sans-serif;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1.5;
+  font-weight: 300;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 *,
