Added auto scroll to the end after store update (by closed issues/31). Added new test auto-trigger button.

--- a/website/Application.css
+++ b/website/Application.css
@@ -42,6 +42,10 @@ a:hover {
   background-color: #000000;
 }
 
+.Label{
+  margin-right: .5em;
+}
+
 .update {
   color: #6FB3D2;
   margin-right: .5em;
